third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/bug_16335.move
//# publish
module 0x42::Test {
    fun f(x: &mut || has drop) {
        *x = || {};
    }

    fun f2() {
        let x: || has copy+drop = ||{};
        f(&mut x);
    }
}

//# run --verbose 0x42::Test::f2
